--- a/api/Pipfile
+++ b/api/Pipfile
@@ -5,10 +5,11 @@ name = "pypi"
 
 [packages]
 connexion = {extras = ["swagger-ui"], version = "*"}
-openalchemy = "*"
+openalchemy = "2.0.0"
 
 [dev-packages]
 black = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.9"
