--- a/api/Pipfile
+++ b/api/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 connexion = {extras = ["swagger-ui"], version = "*"}
 openalchemy = "2.0.0"
+pyyaml = "*"
 
 [dev-packages]
 black = "*"
