--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -14,13 +14,23 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Install dependencies
+      - name: Go to api dir
+        run: |
+          cd api
+      - name: Install pipenv
         run: |
           cd api
           python -m pip install --upgrade pip
           pip install pipenv
+      - id: cache-pipenv
+        uses: actions/cache@v1
+        with:
+          path: ~/.local/share/virtualenvs
+          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+      - name: Install dependencies
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        run: |
           pipenv install --dev
-          pipenv shell
       - name: Test with pytest
         run: |
-          pytest
+          pipenv run pytest
