--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -31,6 +31,6 @@ jobs:
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           pipenv install --dev
-      - name: Test with pytest
+      - name: Run tests
         run: |
-          pipenv run pytest
+          pipenv run test
