--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -5,11 +5,12 @@ on:
     branches:
       - main
 
+defaults:
+  run:
+    working-directory: ./api
 jobs:
   api-test:
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./api
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
