--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -32,3 +32,32 @@ jobs:
         working-directory: ./api
         run: |
           pipenv run test
+
+  api-build:
+    runs-on: ubuntu-latest
+    needs:
+      - api-test
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install pipenv
+        run: |
+          python -m pip install --upgrade pip
+          pip install pipenv
+      - name: create package
+        working-directory: ./api
+        run: |
+          mkdir dist
+          pipenv lock -r > requirements.txt
+          pip install -r requirements.txt --target dist
+          cp -r api.py app.py openapi library dist/
+          cd dist
+          zip -r api-deployment-package.zip .
+      - name: Upload artifacts for release
+        uses: actions/upload-artifact@v1
+        with:
+          name: lambda
+          path: dist/
