correct path to artifacts

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -60,4 +60,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: lambda
-          path: dist/
+          path: api/dist/
