--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -19,7 +19,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pipenv
       - id: cache-pipenv
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ~/.local/share/virtualenvs
           key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
@@ -60,4 +60,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: lambda
-          path: api/dist/
+          path: api/dist/api-deployment-package.zip
