change to using npm command

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -87,7 +87,4 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: "us-east-1"
         run: |
-          echo $AWS_ACCESS_KEY_ID
-          ls -la
-          ls -la resources
-          cdk deploy InfrastructureStack
+          npm run cdk deploy --require-approval never InfrastructureStack
