--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy:infrastructure": "cdk deploy InfrastructureStack --require-approval never"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.73.0",
