--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -27,6 +27,8 @@
     "@aws-cdk/aws-apigateway": "1.74.0",
     "@aws-cdk/aws-codedeploy": "1.74.0",
     "@aws-cdk/aws-lambda": "1.74.0",
+    "@aws-cdk/aws-route53": "1.74.0",
+    "@aws-cdk/aws-route53-targets": "1.74.0",
     "@aws-cdk/core": "1.74.0",
     "source-map-support": "^0.5.16",
     "uuid": "^8.3.1"
