--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -25,7 +25,9 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "1.74.0",
+    "@aws-cdk/aws-certificatemanager": "1.74.0",
     "@aws-cdk/aws-codedeploy": "1.74.0",
+    "@aws-cdk/aws-iam": "1.74.0",
     "@aws-cdk/aws-lambda": "1.74.0",
     "@aws-cdk/aws-route53": "1.74.0",
     "@aws-cdk/aws-route53-targets": "1.74.0",
