--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -98,5 +98,6 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: "us-east-1"
           AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT }}
+          AWS_OPEN_ALCHEMY_CERTIFICATE_ARN_KEY: ${{ secrets.AWS_OPEN_ALCHEMY_CERTIFICATE_ARN_KEY }}
         run: |
           npm run deploy:infrastructure
