--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -18,7 +18,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
-      - id: cache-pipenv
+      - name: Cache pipenv
+        id: cache-pipenv
         uses: actions/cache@v2
         with:
           path: ~/.local/share/virtualenvs
@@ -73,18 +74,20 @@ jobs:
         with:
           node-version: 14.x
       - name: Cache node modules
+        id: cache-node-modules
         uses: actions/cache@v2
         env:
           cache-name: cache-node-modules
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/infrastructure/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - name: Install dependencies
         working-directory: ./infrastructure
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm install
       - name: Retrieve api deployment package
         uses: actions/download-artifact@v2
