add seeds endpoint

--- a/api/openapi/editor.yaml
+++ b/api/openapi/editor.yaml
@@ -105,6 +105,30 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/SeedName"
+  /seeds/{seed_id}:
+    get:
+      summary: Get the value of a seed
+      operationId: library.seeds.get
+      parameters:
+        - in: path
+          name: seed_id
+          schema:
+            $ref: "#/components/schemas/SeedName"
+          required: true
+          description: The id of the seed
+      responses:
+        200:
+          description: The seed value
+          content:
+            text/plain:
+              schema:
+                $ref: "#/components/schemas/SeedValue"
+        404:
+          description: The seed was not found
+          content:
+            text/plain:
+              schema:
+                type: string
 
 components:
   parameters:
