--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -63,10 +63,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
-      - name: create package
+      - name: create distribution directory
         working-directory: ./api
         run: |
           mkdir dist
+      - name: retrieve seeds
+        uses: actions/download-artifact@v2
+        with:
+          name: assets-seed
+          path: dist/assets/seeds
+      - name: create package
+        working-directory: ./api
+        run: |
           pipenv lock -r > requirements.txt
           pip install -r requirements.txt --target dist
           cp -r api.py app.py openapi library dist/
