add CORS headers

--- a/api/Pipfile
+++ b/api/Pipfile
@@ -8,6 +8,7 @@ connexion = {extras = ["swagger-ui"], version = "*"}
 openalchemy = "2.0.0"
 pyyaml = "*"
 serverless-wsgi = "*"
+flask-cors = "*"
 
 [dev-packages]
 black = "*"
