--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: jdkandersson/OpenAlchemy
-      - name: Upload seed assets
+      - name: upload seed assets
         uses: actions/upload-artifact@v2
         with:
           name: assets-seeds
@@ -25,26 +25,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python
+      - name: set up python
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Install pipenv
+      - name: install pipenv
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
-      - name: Cache pipenv
+      - name: cache pipenv
         id: cache-pipenv
         uses: actions/cache@v2
         with:
           path: ~/.local/share/virtualenvs
           key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
-      - name: Install dependencies
+      - name: install dependencies
         working-directory: ./api
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           pipenv install --dev
-      - name: Run tests
+      - name: run tests
         working-directory: ./api
         run: |
           pipenv run test
@@ -55,11 +55,11 @@ jobs:
       - assets-seeds
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python
+      - name: set up python
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Install pipenv
+      - name: install pipenv
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
@@ -76,7 +76,7 @@ jobs:
           cp -r api.py app.py openapi library dist/
           cd dist
           zip -r api-deployment-package.zip .
-      - name: Upload artifacts for release
+      - name: upload artifacts for release
         uses: actions/upload-artifact@v2
         with:
           name: lambda
@@ -89,25 +89,25 @@ jobs:
       - api-build
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Node
+      - name: set up node
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
-      - name: Cache node modules
+      - name: cache node modules
         uses: actions/cache@v2
         env:
           cache-name: cache-node-modules
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/infrastructure/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      - name: Install dependencies
+      - name: install dependencies
         working-directory: ./infrastructure
         run: npm install
-      - name: Retrieve api deployment package
+      - name: retrieve api deployment package
         uses: actions/download-artifact@v2
         with:
           name: lambda
@@ -129,11 +129,11 @@ jobs:
       - api-deploy
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python
+      - name: set up python
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Install pipenv
+      - name: install pipenv
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
@@ -142,7 +142,7 @@ jobs:
         with:
           path: ~/.local/share/virtualenvs
           key: ${{ runner.os }}-pipenv-${{ hashFiles('**/test/Pipfile.lock') }}
-      - name: Install dependencies
+      - name: install dependencies
         working-directory: ./test
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
@@ -151,3 +151,27 @@ jobs:
         working-directory: ./test
         run: |
           pipenv run test
+
+  web-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - name: cache node_modules
+        id: cache-node_modules
+        uses: actions/cache@v2
+        with:
+          path: web/node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/web/package-lock.json') }}
+      - name: install dependencies
+        working-directory: ./web
+        if: steps.cache-node_modules.outputs.cache-hit != 'true'
+        run: |
+          npm install
+      - name: run tests
+        working-directory: ./web
+        run: |
+          npm run test:ci
