--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "buildProd": "ng build --prod",
     "test": "ng test",
+    "test:ci": "ng test --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "prettier": "npx prettier --write .",
