--- a/web/package.json
+++ b/web/package.json
@@ -42,18 +42,20 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@types/puppeteer": "^5.4.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-marbles": "^0.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.1",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "pre-commit": "^1.2.2",
     "prettier": "2.0.5",
     "protractor": "~7.0.0",
+    "puppeteer": "^5.5.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.5"
