--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -6,121 +6,121 @@ on:
       - main
 
 jobs:
-  # assets-seeds:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Get OpenAlchemy repo
-  #       uses: actions/checkout@v2
-  #       with:
-  #         repository: jdkandersson/OpenAlchemy
-  #     - name: upload seed assets
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: assets-seeds
-  #         path: |
-  #           examples/**/*example-spec.yml
-  #           !**/*remote*/**
+  assets-seeds:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get OpenAlchemy repo
+        uses: actions/checkout@v2
+        with:
+          repository: jdkandersson/OpenAlchemy
+      - name: upload seed assets
+        uses: actions/upload-artifact@v2
+        with:
+          name: assets-seeds
+          path: |
+            examples/**/*example-spec.yml
+            !**/*remote*/**
 
-  # api-test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: set up python
-  #       uses: actions/setup-python@v2
-  #       with:
-  #         python-version: 3.9
-  #     - name: install pipenv
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         pip install pipenv
-  #     - name: cache pipenv
-  #       id: cache-pipenv
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: ~/.local/share/virtualenvs
-  #         key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
-  #     - name: install dependencies
-  #       working-directory: ./api
-  #       if: steps.cache-pipenv.outputs.cache-hit != 'true'
-  #       run: |
-  #         pipenv install --dev
-  #     - name: run tests
-  #       working-directory: ./api
-  #       run: |
-  #         pipenv run test
+  api-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: install pipenv
+        run: |
+          python -m pip install --upgrade pip
+          pip install pipenv
+      - name: cache pipenv
+        id: cache-pipenv
+        uses: actions/cache@v2
+        with:
+          path: ~/.local/share/virtualenvs
+          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/api/Pipfile.lock') }}
+      - name: install dependencies
+        working-directory: ./api
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        run: |
+          pipenv install --dev
+      - name: run tests
+        working-directory: ./api
+        run: |
+          pipenv run test
 
-  # api-build:
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - assets-seeds
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: set up python
-  #       uses: actions/setup-python@v2
-  #       with:
-  #         python-version: 3.9
-  #     - name: install pipenv
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         pip install pipenv
-  #     - name: retrieve seeds
-  #       uses: actions/download-artifact@v2
-  #       with:
-  #         name: assets-seeds
-  #         path: api/dist/assets/seeds
-  #     - name: create package
-  #       working-directory: ./api
-  #       run: |
-  #         pipenv lock -r > requirements.txt
-  #         pip install -r requirements.txt --target dist
-  #         cp -r api.py app.py openapi library dist/
-  #         cd dist
-  #         zip -r api-deployment-package.zip .
-  #     - name: upload artifacts for release
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: lambda
-  #         path: api/dist/api-deployment-package.zip
+  api-build:
+    runs-on: ubuntu-latest
+    needs:
+      - assets-seeds
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: install pipenv
+        run: |
+          python -m pip install --upgrade pip
+          pip install pipenv
+      - name: retrieve seeds
+        uses: actions/download-artifact@v2
+        with:
+          name: assets-seeds
+          path: api/dist/assets/seeds
+      - name: create package
+        working-directory: ./api
+        run: |
+          pipenv lock -r > requirements.txt
+          pip install -r requirements.txt --target dist
+          cp -r api.py app.py openapi library dist/
+          cd dist
+          zip -r api-deployment-package.zip .
+      - name: upload artifacts for release
+        uses: actions/upload-artifact@v2
+        with:
+          name: lambda
+          path: api/dist/api-deployment-package.zip
 
-  # api-deploy:
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - api-test
-  #     - api-build
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: set up node
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 14.x
-  #     - name: cache node modules
-  #       id: cache-node_modules
-  #       uses: actions/cache@v2
-  #       env:
-  #         cache-name: cache-node-modules
-  #       with:
-  #         path: infrastructure/node_modules
-  #         key: ${{ runner.os }}-api-deploy-${{ env.cache-name }}-${{ hashFiles('**/infrastructure/package-lock.json') }}
-  #     - name: install dependencies
-  #       if: steps.cache-node_modules.outputs.cache-hit != 'true'
-  #       working-directory: ./infrastructure
-  #       run: npm install
-  #     - name: retrieve api deployment package
-  #       uses: actions/download-artifact@v2
-  #       with:
-  #         name: lambda
-  #         path: infrastructure/resources/
-  #     - name: deploy
-  #       working-directory: ./infrastructure
-  #       env:
-  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         AWS_DEFAULT_REGION: "us-east-1"
-  #         AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT }}
-  #         AWS_OPEN_ALCHEMY_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_CERTIFICATE_ARN }}
-  #         AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN }}
-  #       run: |
-  #         npm run deploy:api
+  api-deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - api-test
+      - api-build
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - name: cache node modules
+        id: cache-node_modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: infrastructure/node_modules
+          key: ${{ runner.os }}-infrastructure-${{ env.cache-name }}-${{ hashFiles('**/infrastructure/package-lock.json') }}
+      - name: install dependencies
+        if: steps.cache-node_modules.outputs.cache-hit != 'true'
+        working-directory: ./infrastructure
+        run: npm install
+      - name: retrieve api deployment package
+        uses: actions/download-artifact@v2
+        with:
+          name: lambda
+          path: infrastructure/resources/
+      - name: deploy
+        working-directory: ./infrastructure
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: "us-east-1"
+          AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT }}
+          AWS_OPEN_ALCHEMY_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_CERTIFICATE_ARN }}
+          AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN }}
+        run: |
+          npm run deploy:api
 
   identity-deploy:
     runs-on: ubuntu-latest
@@ -137,7 +137,7 @@ jobs:
           cache-name: cache-node-modules
         with:
           path: infrastructure/node_modules
-          key: ${{ runner.os }}-identity-deploy-${{ env.cache-name }}-${{ hashFiles('**/infrastructure/package-lock.json') }}
+          key: ${{ runner.os }}-infrastructure-${{ env.cache-name }}-${{ hashFiles('**/infrastructure/package-lock.json') }}
       - name: install dependencies
         if: steps.cache-node_modules.outputs.cache-hit != 'true'
         working-directory: ./infrastructure
@@ -156,55 +156,55 @@ jobs:
           touch  resources/api-deployment-package.zip
           npm run deploy:identity
 
-  # production-test:
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - api-deploy
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: set up python
-  #       uses: actions/setup-python@v2
-  #       with:
-  #         python-version: 3.9
-  #     - name: install pipenv
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         pip install pipenv
-  #     - id: cache-pipenv
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: ~/.local/share/virtualenvs
-  #         key: ${{ runner.os }}-pipenv-${{ hashFiles('**/test/Pipfile.lock') }}
-  #     - name: install dependencies
-  #       working-directory: ./test
-  #       if: steps.cache-pipenv.outputs.cache-hit != 'true'
-  #       run: |
-  #         pipenv install --dev
-  #     - name: Run tests
-  #       working-directory: ./test
-  #       run: |
-  #         pipenv run test
+  production-test:
+    runs-on: ubuntu-latest
+    needs:
+      - api-deploy
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: install pipenv
+        run: |
+          python -m pip install --upgrade pip
+          pip install pipenv
+      - id: cache-pipenv
+        uses: actions/cache@v2
+        with:
+          path: ~/.local/share/virtualenvs
+          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/test/Pipfile.lock') }}
+      - name: install dependencies
+        working-directory: ./test
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        run: |
+          pipenv install --dev
+      - name: Run tests
+        working-directory: ./test
+        run: |
+          pipenv run test
 
-  # web-test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: set up node
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 14.x
-  #     - name: cache node_modules
-  #       id: cache-node_modules
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: web/node_modules
-  #         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/web/package-lock.json') }}
-  #     - name: install dependencies
-  #       working-directory: ./web
-  #       if: steps.cache-node_modules.outputs.cache-hit != 'true'
-  #       run: |
-  #         npm install
-  #     - name: run tests
-  #       working-directory: ./web
-  #       run: |
-  #         npm run test:ci
+  web-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - name: cache node_modules
+        id: cache-node_modules
+        uses: actions/cache@v2
+        with:
+          path: web/node_modules
+          key: ${{ runner.os }}-web-${{ env.cache-name }}-${{ hashFiles('**/web/package-lock.json') }}
+      - name: install dependencies
+        working-directory: ./web
+        if: steps.cache-node_modules.outputs.cache-hit != 'true'
+        run: |
+          npm install
+      - name: run tests
+        working-directory: ./web
+        run: |
+          npm run test:ci
