--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -75,12 +75,12 @@ jobs:
           pip install -r requirements.txt --target dist
           cp -r api.py app.py openapi library dist/
           cd dist
-          zip -r api-deployment-package.zip .
+          zip -r deployment-package.zip .
       - name: upload artifacts for release
         uses: actions/upload-artifact@v2
         with:
           name: api
-          path: api/dist/api-deployment-package.zip
+          path: api/dist/deployment-package.zip
 
   api-deploy:
     runs-on: ubuntu-latest
@@ -109,7 +109,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: api
-          path: infrastructure/resources/
+          path: infrastructure/resources/api/
       - name: deploy
         working-directory: ./infrastructure
         env:
@@ -152,8 +152,8 @@ jobs:
           AWS_OPEN_ALCHEMY_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_CERTIFICATE_ARN }}
           AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN }}
         run: |
-          mkdir resources
-          touch  resources/api-deployment-package.zip
+          mkdir -p resources/api
+          touch  resources/api/deployment-package.zip
           npm run deploy:identity
 
   production-test:
@@ -237,3 +237,42 @@ jobs:
         with:
           name: web
           path: web/dist/
+
+  identity-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - name: cache node modules
+        id: cache-node_modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: infrastructure/node_modules
+          key: ${{ runner.os }}-infrastructure-${{ env.cache-name }}-${{ hashFiles('**/infrastructure/package-lock.json') }}
+      - name: install dependencies
+        if: steps.cache-node_modules.outputs.cache-hit != 'true'
+        working-directory: ./infrastructure
+        run: npm install
+      - name: retrieve web assets
+        uses: actions/download-artifact@v2
+        with:
+          name: web
+          path: infrastructure/resources/web/
+      - name: deploy
+        working-directory: ./infrastructure
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: "us-east-1"
+          AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT }}
+          AWS_OPEN_ALCHEMY_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_CERTIFICATE_ARN }}
+          AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN }}
+        run: |
+          mkdir -p resources/api
+          touch  resources/api/deployment-package.zip
+          npm run deploy:web
