--- a/.github/workflows/ci-cd-api.yaml
+++ b/.github/workflows/ci-cd-api.yaml
@@ -1,9 +1,13 @@
-name: CI-CD for the OpenAlchemy Editor
+name: CI-CD for the OpenAlchemy Editor API
 
 on:
   push:
     branches:
       - main
+    paths-ignore:
+      - "web/**"
+      - "infrastructure/lib/identity-stack.ts"
+      - "infrastructure/lib/web-stack.ts"
 
 jobs:
   assets-seeds:
@@ -123,41 +127,6 @@ jobs:
           mkdir -p resources/web
           npm run deploy:api
 
-  identity-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: set up node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
-      - name: cache node modules
-        id: cache-node_modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: infrastructure/node_modules
-          key: ${{ runner.os }}-infrastructure-${{ env.cache-name }}-${{ hashFiles('**/infrastructure/package-lock.json') }}
-      - name: install dependencies
-        if: steps.cache-node_modules.outputs.cache-hit != 'true'
-        working-directory: ./infrastructure
-        run: npm install
-      - name: deploy
-        working-directory: ./infrastructure
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: "us-east-1"
-          AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT }}
-          AWS_OPEN_ALCHEMY_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_CERTIFICATE_ARN }}
-          AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN }}
-        run: |
-          mkdir -p resources/web
-          mkdir -p resources/api
-          touch  resources/api/deployment-package.zip
-          npm run deploy:identity
-
   production-test:
     runs-on: ubuntu-latest
     needs:
@@ -186,95 +155,3 @@ jobs:
         working-directory: ./test
         run: |
           pipenv run test
-
-  web-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: set up node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
-      - name: cache node_modules
-        id: cache-node_modules
-        uses: actions/cache@v2
-        with:
-          path: web/node_modules
-          key: ${{ runner.os }}-web-${{ env.cache-name }}-${{ hashFiles('**/web/package-lock.json') }}
-      - name: install dependencies
-        working-directory: ./web
-        if: steps.cache-node_modules.outputs.cache-hit != 'true'
-        run: |
-          npm install
-      - name: run tests
-        working-directory: ./web
-        run: |
-          npm run test:ci
-
-  web-build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: set up node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
-      - name: cache node_modules
-        id: cache-node_modules
-        uses: actions/cache@v2
-        with:
-          path: web/node_modules
-          key: ${{ runner.os }}-web-${{ env.cache-name }}-${{ hashFiles('**/web/package-lock.json') }}
-      - name: install dependencies
-        working-directory: ./web
-        if: steps.cache-node_modules.outputs.cache-hit != 'true'
-        run: |
-          npm install
-      - name: build
-        working-directory: ./web
-        run: |
-          npm run build:prod
-      - name: upload artifacts for release
-        uses: actions/upload-artifact@v2
-        with:
-          name: web
-          path: web/dist/
-
-  web-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: set up node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
-      - name: cache node modules
-        id: cache-node_modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: infrastructure/node_modules
-          key: ${{ runner.os }}-infrastructure-${{ env.cache-name }}-${{ hashFiles('**/infrastructure/package-lock.json') }}
-      - name: install dependencies
-        if: steps.cache-node_modules.outputs.cache-hit != 'true'
-        working-directory: ./infrastructure
-        run: npm install
-      - name: retrieve web assets
-        uses: actions/download-artifact@v2
-        with:
-          name: web
-          path: infrastructure/resources/web/
-      - name: deploy
-        working-directory: ./infrastructure
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: "us-east-1"
-          AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT }}
-          AWS_OPEN_ALCHEMY_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_CERTIFICATE_ARN }}
-          AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN }}
-        run: |
-          mkdir -p resources/api
-          touch  resources/api/deployment-package.zip
-          npm run deploy:web
