--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -11,7 +11,7 @@
     "cdk": "cdk",
     "deploy:api": "cdk deploy EditorApiStack --require-approval never",
     "deploy:identity": "cdk deploy IdentityStack --require-approval never",
-    "deploy:web": "cdk deploy WebStack --require-approval never"
+    "deploy:web": "cdk deploy EditorWebStack --require-approval never"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.75.0",
