--- a/.github/workflows/ci-cd-web.yaml
+++ b/.github/workflows/ci-cd-web.yaml
@@ -72,7 +72,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: web
-          path: web/dist/
+          path: web/dist/editor/
 
   web-deploy:
     runs-on: ubuntu-latest
