--- a/.github/workflows/ci-cd-identity.yaml
+++ b/.github/workflows/ci-cd-identity.yaml
@@ -36,6 +36,7 @@ jobs:
       - name: deploy
         working-directory: ./infrastructure
         env:
+          STACK: IdentityStack
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: "us-east-1"
@@ -43,7 +44,4 @@ jobs:
           AWS_OPEN_ALCHEMY_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_CERTIFICATE_ARN }}
           AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN }}
         run: |
-          mkdir -p resources/web
-          mkdir -p resources/api
-          touch  resources/api/deployment-package.zip
           npm run deploy:identity
