--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -29,6 +29,7 @@
     "@aws-cdk/aws-apigateway": "1.75.0",
     "@aws-cdk/aws-certificatemanager": "1.75.0",
     "@aws-cdk/aws-cloudfront": "1.75.0",
+    "@aws-cdk/aws-cloudfront-origins": "1.75.0",
     "@aws-cdk/aws-codedeploy": "1.75.0",
     "@aws-cdk/aws-cognito": "1.75.0",
     "@aws-cdk/aws-iam": "1.75.0",
