--- a/.github/workflows/ci-cd-web.yaml
+++ b/.github/workflows/ci-cd-web.yaml
@@ -77,6 +77,7 @@ jobs:
   web-deploy:
     runs-on: ubuntu-latest
     needs:
+      - web-test
       - web-build
     steps:
       - uses: actions/checkout@v2
