--- a/.github/workflows/ci-cd-web.yaml
+++ b/.github/workflows/ci-cd-web.yaml
@@ -46,23 +46,23 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
-      - name: cache node_modules
-        id: cache-node_modules
-        uses: actions/cache@v2
-        with:
-          path: web/node_modules
-          key: ${{ runner.os }}-web-${{ env.cache-name }}-${{ hashFiles('**/web/package-lock.json') }}
-      - name: install dependencies
-        working-directory: ./web
-        if: steps.cache-node_modules.outputs.cache-hit != 'true'
-        run: |
-          npm install
       - name: cache build
         id: cache-build
         uses: actions/cache@v2
         with:
           path: web/dist
-          key: ${{ runner.os }}-web-${{ env.cache-name }}-${{ hashFiles('**/web/**') }}
+          key: ${{ runner.os }}-web-${{ env.cache-name }}-${{ hashFiles('web/**') }}
+      - name: cache node_modules
+        id: cache-node_modules
+        uses: actions/cache@v2
+        with:
+          path: web/node_modules
+          key: ${{ runner.os }}-web-${{ env.cache-name }}-${{ hashFiles('web/package-lock.json') }}
+      - name: install dependencies
+        working-directory: ./web
+        if: steps.cache-node_modules.outputs.cache-hit != 'true'
+        run: |
+          npm install
       - name: build
         working-directory: ./web
         if: steps.cache-build.outputs.cache-hit != 'true'
@@ -92,7 +92,7 @@ jobs:
           cache-name: cache-node-modules
         with:
           path: infrastructure/node_modules
-          key: ${{ runner.os }}-infrastructure-${{ env.cache-name }}-${{ hashFiles('**/infrastructure/package-lock.json') }}
+          key: ${{ runner.os }}-infrastructure-${{ env.cache-name }}-${{ hashFiles('infrastructure/package-lock.json') }}
       - name: install dependencies
         if: steps.cache-node_modules.outputs.cache-hit != 'true'
         working-directory: ./infrastructure
