correct if logic

--- a/.github/workflows/ci-cd-web.yaml
+++ b/.github/workflows/ci-cd-web.yaml
@@ -62,7 +62,7 @@ jobs:
           key: ${{ runner.os }}-web-${{ env.cache-name }}-${{ hashFiles('web/package-lock.json') }}
       - name: install dependencies
         working-directory: ./web
-        if: steps.cache-build.outputs.cache-hit != 'true' || steps.cache-node_modules.outputs.cache-hit != 'true'
+        if: steps.cache-build.outputs.cache-hit != 'true' && steps.cache-node_modules.outputs.cache-hit != 'true'
         run: |
           npm install
       - name: build
