--- a/.github/workflows/ci-cd-api.yaml
+++ b/.github/workflows/ci-cd-api.yaml
@@ -139,6 +139,7 @@ jobs:
           AWS_OPEN_ALCHEMY_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_CERTIFICATE_ARN }}
           AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN: ${{ secrets.AWS_OPEN_ALCHEMY_API_CERTIFICATE_ARN }}
         run: |
+          npx cdk bootstrap
           npm run deploy:api
 
   production-test:
