--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -78,3 +78,4 @@ repos:
           - eslint@7.14.0
           - "@angular-eslint/eslint-plugin@0.8.0-beta.2"
           - "@typescript-eslint/eslint-plugin@4.8.2"
+          - eslint-plugin-prettier@3.1.4
