add workflows for pull requests

--- a/api/setup.cfg
+++ b/api/setup.cfg
@@ -14,7 +14,7 @@ omit =
 branch = True
 
 [coverage:report]
-# Regexes for lines to exclude from consideration
+# Regular expressions for lines to exclude from consideration
 exclude_lines =
     # Have to re-enable the standard pragma
     pragma: no cover
