--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -14,33 +14,32 @@
     "deploy:web": "cdk deploy EditorWebStack --require-approval never"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.76.0",
-    "@types/jest": "^26.0.10",
+    "@aws-cdk/assert": "1.78.0",
+    "@types/jest": "^26.0.19",
     "@types/node": "10.17.27",
     "@types/uuid": "^8.3.0",
-    "aws-cdk": "1.76.0",
+    "aws-cdk": "1.78.0",
     "jest": "^26.4.2",
     "prettier": "^2.2.0",
     "ts-jest": "^26.2.0",
-    "ts-node": ">=9.0.0",
-    "typescript": "~3.9.7"
+    "ts-node": ">=9.1.1",
+    "typescript": "~4.1.3"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "1.76.0",
-    "@aws-cdk/aws-certificatemanager": "1.76.0",
-    "@aws-cdk/aws-cloudfront": "1.76.0",
-    "@aws-cdk/aws-cloudfront-origins": "1.76.0",
-    "@aws-cdk/aws-codedeploy": "1.76.0",
-    "@aws-cdk/aws-cognito": "1.76.0",
-    "@aws-cdk/aws-iam": "1.76.0",
-    "@aws-cdk/aws-lambda": "1.76.0",
-    "@aws-cdk/aws-route53": "1.76.0",
-    "@aws-cdk/aws-route53-targets": "1.76.0",
-    "@aws-cdk/aws-s3": "1.76.0",
-    "@aws-cdk/aws-s3-deployment": "1.76.0",
-    "@aws-cdk/core": "1.76.0",
-    "source-map-support": "^0.5.16",
-    "uuid": "^8.3.1"
+    "@aws-cdk/aws-apigateway": "1.78.0",
+    "@aws-cdk/aws-certificatemanager": "1.78.0",
+    "@aws-cdk/aws-cloudfront": "1.78.0",
+    "@aws-cdk/aws-cloudfront-origins": "1.78.0",
+    "@aws-cdk/aws-codedeploy": "1.78.0",
+    "@aws-cdk/aws-cognito": "1.78.0",
+    "@aws-cdk/aws-iam": "1.78.0",
+    "@aws-cdk/aws-lambda": "1.78.0",
+    "@aws-cdk/aws-route53": "1.78.0",
+    "@aws-cdk/aws-route53-targets": "1.78.0",
+    "@aws-cdk/aws-s3": "1.78.0",
+    "@aws-cdk/aws-s3-deployment": "1.78.0",
+    "@aws-cdk/core": "1.78.0",
+    "source-map-support": "^0.5.16"
   },
   "prettier": {
     "singleQuote": true
